correct widths on mobile view

--- a/ma5/q/debate.css
+++ b/ma5/q/debate.css
@@ -495,7 +495,7 @@ and (max-width : 930px) {
         margin-bottom: 30px;
         margin-top: 30px;
         margin-right: -8%;
-        width: 108%;
+        width: 94%;
     }
 
     #add_question input, #add_question textarea {
